# Clinical-Trial-Data-Pipeline

./: .dockerignore  AGENTS.md  Dockerfile  Makefile  README.md  app.py  docker-compose.airflow.yml  docker-compose.yml  pyproject.toml
airflow/: README.md
airflow/dags/: clinical_trial_pipeline_dag.py
sql/analytics/: interventions_completion_rate.sql  study_duration.sql  top_conditions.sql  trials_by_country.sql  trials_by_phase.sql
sql/raw/: 001_create_raw_studies.sql
sql/staging/: 001_stg_studies.sql  002_stg_conditions.sql  003_stg_interventions.sql  004_stg_locations.sql
src/clinical_trial_pipeline/: cli.py
src/clinical_trial_pipeline/common/: logging.py
src/clinical_trial_pipeline/extract/: clinicaltrials_client.py
src/clinical_trial_pipeline/load/: ingestion.py
src/clinical_trial_pipeline/storage/: database.py  raw_repository.py
tests/: conftest.py  test_clinicaltrials_client.py  test_ingestion.py  test_storage.py
tests/airflow/: test_clinical_trial_pipeline_dag.py
tests/orchestration/: test_clinical_trial_pipeline_dag.py
