[project]
name = "clinical-trial-pipeline"
version = "0.1.0"
description = "ELT data pipeline for clinical trial data from ClinicalTrials.gov"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.4.3",
    "requests>=2.32.5",
    "streamlit>=1.53.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-mock>=3.15.1",
]
